src/themes/gold.module.css
.theme {}

:root:has(body):has(.theme) {
    /* Base UI */
    --background: #12100b;
    --background-variant: #242015;
    --background-variant-border: #3d3522;
    --tertiary-background: #4d432b;

    --foreground: #fcfaf2;
    --foreground-variant: #d4af37;
    --muted-foreground: #a68a2d;
    --muted: #7a6210;
    --disabled: #3d3522;

    /* Actions */
    --primary: #d4af37;
    --on-primary: #12100b;
    --secondary: #c5a028;
    --on-secondary: #12100b;

    /* Game Status */
    --correct: #f9d71c;
    --correct-border: #aa8a15;
    --incorrect: #7a6210;
    --incorrect-border: #3d3108;

    /* Archive Tiles */
    --won: #ffd700;
    --won-border: #b8860b;
    --on-won: #12100b;

    --lost: #3d0a0a;
    --lost-border: #8b0000;
    --on-lost: #fcfaf2;

    --in-progress: #4d432b;
    --in-progress-border: #d4af37;
    --on-in-progress: #fcfaf2;

    --unplayed: #1a1605;
    --unplayed-border: #3d3522;
    --on-unplayed: #a68a2d;

    /* Accents & UI Elements */
    --win-streak: #ffd700;
    --play-streak: #e5e4e2;

    --arrow-start: #3d3522;
    --arrow-middle: #d4af37;
    --arrow-end: #3d3522;

    --handle: #fcfaf2;
    --toast: #d4af37;
    --on-toast: #12100b;
}

